--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,12 @@
 [project]
 name = "libtorrent-stubs"
 version = "0.0.1"
-description = "Add your description here"
+description = "Type stubs for libtorrent"
 readme = "README.md"
 authors = [{ name = "stabldev", email = "thestabldev@gmail.com" }]
+license = { text = "MIT" }
 requires-python = ">=3.13"
-dependencies = []
+dependencies = ["libtorrent>=2.0.11"]
 
 [build-system]
 requires = ["uv_build>=0.8.0,<0.9"]
