fix: class methods overrides

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ license = { text = "MIT" }
 requires-python = ">=3.13"
 dependencies = ["libtorrent>=2.0.11"]
 
+[tool.pyright]
+reportExplicitAny = "none"
+
 [build-system]
 requires = ["uv_build>=0.8.0,<0.9"]
 build-backend = "uv_build"
