--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,24 @@ description = "Type stubs for libtorrent"
 readme = "README.md"
 authors = [{ name = "stabldev", email = "thestabldev@gmail.com" }]
 license = { text = "MIT" }
-requires-python = ">=3.13"
+requires-python = ">=3.9"
 dependencies = ["libtorrent>=2.0.11"]
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
+    "Programming Language :: Python :: 3.15",
+    "License :: OSI Approved :: MIT License",
+    "Typing :: Stubs Only",
+]
 
 [tool.pyright]
-reportExplicitAny = "none"
+pythonVersion = "3.9"
+typeCheckingMode = "strict"
 
 [build-system]
 requires = ["uv_build>=0.8.0,<0.9"]
