--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,15 +5,16 @@ on:
     tags:
       - "v*"
 
+permissions:
+  id-token: write
+
 jobs:
-  publish_pypi:
+  release:
     name: Publish to PyPI
     runs-on: ubuntu-latest
     environment:
       name: pypi
       url: https://pypi.org/project/libtorrent-stubs
-    permissions:
-      id-token: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
